--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,67 +1,78 @@
-$color-primary: #8c6991;
-$color-primary-dark: #2f1533;
-$color-primary-light: #f9f0ff;
+:root {
+  --clr-primary: hsl(293, 16%, 49%);
+  --clr-primary-light: hsl(276, 100%, 97%);
+  --clr-primary-dark: hsl(292, 42%, 14%);
 
-$color-white: #fff;
-$color-grey: #dee2e6;
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-grey: hsl(210, 14%, 89%);
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  // outline: 1px solid red;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
-  background: url("/assets/images/background-pattern-desktop.svg"),
-    $color-primary-light;
+  background: url("../images/background-pattern-desktop.svg"),
+    var(--clr-primary-light);
   background-position: center top;
   background-repeat: no-repeat;
+  background-size: contain;
   font-family: "Work Sans", sans-serif;
-  font-size: 1rem;
-  color: $color-primary;
+  font-size: 1.5rem;
+  color: var(--clr-primary);
   line-height: 1;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .accordion {
-  background-color: $color-white;
-  width: 37.5rem;
+  background-color: var(--clr-white);
+  width: 60rem;
   height: auto;
   border-radius: 0.94rem;
-  padding: 2.875rem 2.5rem 1rem;
+  padding: 4.55rem 4rem;
+
+  &__heading {
+    display: flex;
+    align-items: center;
+    gap: 2.5rem;
+    margin-bottom: 3.6rem;
+  }
+
+  &__title {
+    font-size: 5.55rem;
+    color: var(--clr-primary-dark);
+  }
 }
 
-.heading {
-  display: flex;
-  align-items: center;
-  gap: 1.875rem;
-  margin-bottom: 0.813rem;
-}
-
-h1 {
-  font-size: 3.44rem;
-  color: $color-primary-dark;
-}
-
-.question {
-  font-size: 1.125rem;
-  font-weight: 600;
-  color: $color-primary-dark;
-  padding: 1.875rem 0;
+.star {
+  width: 4rem;
+  height: 4rem;
 }
 
 .item {
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
+
+  &__question {
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: var(--clr-primary-dark);
+    line-height: 1;
+  }
 }
 
 .icons {
-  width: 1.5rem;
-  height: 1.5rem;
   cursor: pointer;
 }
 
@@ -72,14 +83,15 @@ h1 {
 .hidden-box {
   display: none;
 
-  p {
-    line-height: 1.5;
-    padding-bottom: 1.56rem;
+  .item__answer {
+    line-height: 1.61;
+    padding-top: 2.3rem;
   }
 }
 
 .separator {
-  width: 32.5rem;
-  height: 1px;
-  background-color: $color-grey;
+  width: 100%;
+  height: 0.1rem;
+  background-color: var(--clr-grey);
+  margin: 2.35rem 0;
 }
