--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,11 @@
 :root {
-  --clr-primary: hsl(293, 16%, 49%);
-  --clr-primary-light: hsl(276, 100%, 97%);
-  --clr-primary-dark: hsl(292, 42%, 14%);
+  --clr-primary: 293 16% 49%;
+  --clr-primary-light: 276 100 97%;
+  --clr-primary-dark: 292 42% 14%;
+  --clr-blue: 228 45% 44%;
 
-  --clr-white: hsl(0, 0%, 100%);
-  --clr-grey: hsl(210, 14%, 89%);
+  --clr-white: 0 0% 100%;
+  --clr-grey: 210 14% 89%;
 }
 
 * {
@@ -20,13 +21,13 @@ html {
 
 body {
   background: url("../images/background-pattern-desktop.svg"),
-    var(--clr-primary-light);
+    hsl(var(--clr-primary-light));
   background-position: center top;
   background-repeat: no-repeat;
   background-size: contain;
   font-family: "Work Sans", sans-serif;
   font-size: 1.5rem;
-  color: var(--clr-primary);
+  color: hsl(var(--clr-primary));
   line-height: 1;
   min-height: 100vh;
   display: flex;
@@ -35,11 +36,12 @@ body {
 }
 
 .accordion {
-  background-color: var(--clr-white);
+  background-color: hsl(var(--clr-white));
   width: 60rem;
   height: auto;
-  border-radius: 0.94rem;
+  border-radius: 1.5rem;
   padding: 4.55rem 4rem;
+  box-shadow: 0 2rem 4rem hsl(var(--clr-primary-dark) / 0.08);
 
   &__heading {
     display: flex;
@@ -50,7 +52,7 @@ body {
 
   &__title {
     font-size: 5.55rem;
-    color: var(--clr-primary-dark);
+    color: hsl(var(--clr-primary-dark));
   }
 }
 
@@ -67,7 +69,7 @@ body {
   &__question {
     font-size: 1.8rem;
     font-weight: 600;
-    color: var(--clr-primary-dark);
+    color: hsl(var(--clr-primary-dark));
     line-height: 1;
   }
 }
@@ -92,6 +94,18 @@ body {
 .separator {
   width: 100%;
   height: 0.1rem;
-  background-color: var(--clr-grey);
+  background-color: hsl(var(--clr-grey));
   margin: 2.35rem 0;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  padding: 1rem;
+
+  a {
+    color: hsl(var(--clr-blue));
+  }
 }
