--- a/sass/main.css
+++ b/sass/main.css
@@ -46,14 +46,13 @@ body {
   gap: 2.5rem;
   margin-bottom: 3.6rem;
 }
+.accordion__icon {
+  width: 4rem;
+  height: 4rem;
+}
 .accordion__title {
   font-size: 5.55rem;
   color: hsl(var(--clr-primary-dark));
-}
-
-.star {
-  width: 4rem;
-  height: 4rem;
 }
 
 .item {
@@ -67,8 +66,7 @@ body {
   color: hsl(var(--clr-primary-dark));
   line-height: 1;
 }
-
-.icons {
+.item__question__icons {
   cursor: pointer;
 }
 
